Reactivated NetBeans Modules